gap issue resolved

--- a/style.css
+++ b/style.css
@@ -199,7 +199,8 @@ a{
 .downcnt{
     display: flex;
     flex-direction: column;
-    align-items: space-between;
+    justify-content: space-between;
+    flex: 1;
 }
 
 /* ---------------- Footer ---------------- */
